k8s/overlays/local-kind/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  tls:
    - hosts:
        - devsu.local
      secretName: devsu-demo-tls
  rules:
    - host: devsu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsu-demo
                port:
                  number: 80
